# titiler-stacapi

./: .env.example  404.html  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  RELEASING.md  docker-compose.yml  index.html  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  deploy_mkdocs.yml
contributing/: index.html
custom/application_with_auth/: index.html
custom/application_with_multiple_stac_apis/: index.html
dockerfiles/: Dockerfile.gunicorn  Dockerfile.uvicorn
docs/: mkdocs.yml
docs/src/: technical-considerations.md
docs/src/custom/: application_with_auth.md  application_with_multiple_stac_apis.md
docs/src/endpoints/: collections_endpoints.md  index.md  items_endpoints.md  ogc_wmts_endpoints.md
endpoints/: index.html
endpoints/collections_endpoints/: index.html
endpoints/items_endpoints/: index.html
endpoints/ogc_wmts_endpoints/: index.html
endpoints/tms_endpoints/: index.html
notebooks/: demo_wmts_eoapi.ipynb
release-notes/: index.html
search/: search_index.json
technical-considerations/: index.html
tests/: __init__.py  conftest.py  test_advanced_pystac_client.py  test_app.py  test_backend.py  test_collections.py  test_dependencies.py  test_dependency_params.py  test_items.py  test_render.py  test_wms.py  test_wmts.py
tests/fixtures/: 1040010082988200-visual.tif  20200307aC0853900w361030.json  46_033111301201_1040010082988200.json  catalog.json  catalog_old_renders.json  noaa-emergency-response.json
titiler/pystac/: __init__.py  advanced_client.py
titiler/stacapi/: __init__.py  backend.py  compat.py  dependencies.py  enums.py  errors.py  factory.py  logger.py  main.py  models.py  reader.py  settings.py  utils.py
titiler/stacapi/extensions/: __init__.py  wms.py
titiler/stacapi/pystac/: __init__.py  advanced_client.py
titiler/stacapi/templates/: header.html  landing.html  map.html  wms_1.0.0.xml  wms_1.1.1.xml  wms_1.3.0.xml  wmts-getcapabilities_1.0.0.xml
